soru sorma ve soru cevabi alma kismi tamamlandi